<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_confirm_delete_inset"
    android:paddingTop="@dimen/_14sdp"
    android:paddingBottom="@dimen/_10sdp">

    <TextView
        android:id="@+id/tvEditTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:fontFamily="@font/lato"
        android:text="@string/custom_time"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_20ssp"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvFocus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:fontFamily="@font/lato"
        android:text="@string/focus_time_two_dot"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvEditTitle" />

    <EditText
        android:id="@+id/etFocus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:singleLine="true"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/tvFocus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvFocus"
        android:layout_marginBottom="@dimen/_3sdp"
        app:layout_constraintTop_toTopOf="@id/tvFocus" />

    <TextView
        android:id="@+id/tvBreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:fontFamily="@font/lato"
        android:text="@string/short_break_with_dot"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etFocus" />

    <EditText
        android:id="@+id/etBreak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:singleLine="true"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/tvBreak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvBreak"
        android:layout_marginBottom="@dimen/_3sdp"
        app:layout_constraintTop_toTopOf="@id/tvBreak" />

    <TextView
        android:id="@+id/tvLongBreak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_26sdp"
        android:fontFamily="@font/lato"
        android:text="@string/long_break_with_two_dot"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etBreak" />

    <EditText
        android:id="@+id/etLongBreak"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:singleLine="true"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@id/tvLongBreak"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvLongBreak"
        android:layout_marginBottom="@dimen/_3sdp"
        app:layout_constraintTop_toTopOf="@id/tvLongBreak" />

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/main_green_color"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etLongBreak" />

    <TextView
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:alpha="0.5"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        app:layout_constraintTop_toBottomOf="@id/etLongBreak" />
</androidx.constraintlayout.widget.ConstraintLayout>