<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/dialog_confirm_delete_inset"
    android:paddingTop="@dimen/_12sdp"
    android:paddingBottom="@dimen/_10sdp"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvConfirmTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lato"
        android:textSize="@dimen/_16ssp"
        android:textColor="@color/text_color"
        android:layout_marginHorizontal="@dimen/_12sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/are_you_sure_want_to_delete_this_routine"/>

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:text="@string/yes"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="center"
        android:layout_marginEnd="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/lato"
        android:background="?attr/selectableItemBackground"
        android:textStyle="bold"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/main_green_color"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmTitle"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:text="@string/no"
        android:textAllCaps="true"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        android:gravity="center"
        android:background="?attr/selectableItemBackground"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/lato"
        android:textStyle="bold"
        android:textSize="@dimen/_13ssp"
        android:textColor="@color/text_color"
        android:layout_marginEnd="@dimen/_6sdp"
        android:alpha="0.5"
        app:layout_constraintTop_toBottomOf="@id/tvConfirmTitle"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>