<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_confirm_delete_inset"
    android:paddingHorizontal="@dimen/_12sdp"
    android:paddingVertical="@dimen/_20sdp">

    <TextView
        android:id="@+id/tvSelectMood"
        android:layout_width="match_parent"
        android:text="@string/select_your_mood"
        android:textAlignment="center"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/text_color"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/btnTerrible"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/btnBad"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectMood">

        <ImageView
            android:id="@+id/imgTerrible"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_terrible" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:fontFamily="@font/lato"
            android:includeFontPadding="false"
            android:text="@string/terrible"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnBad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/btnNormal"
        app:layout_constraintStart_toEndOf="@id/btnTerrible"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectMood">

        <ImageView
            android:id="@+id/imgBad"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_bad" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:fontFamily="@font/lato"
            android:includeFontPadding="false"
            android:text="@string/bad"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnNormal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/btnGood"
        app:layout_constraintStart_toEndOf="@id/btnBad"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectMood">

        <ImageView
            android:id="@+id/imgNormal"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_normal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:fontFamily="@font/lato"
            android:includeFontPadding="false"
            android:text="@string/normal"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnGood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@id/btnPerfect"
        app:layout_constraintStart_toEndOf="@id/btnNormal"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectMood">

        <ImageView
            android:id="@+id/imgGood"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_good" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:fontFamily="@font/lato"
            android:includeFontPadding="false"
            android:text="@string/good"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btnPerfect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnGood"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintTop_toBottomOf="@id/tvSelectMood">

        <ImageView
            android:id="@+id/imgPerfect"
            android:layout_width="@dimen/_26sdp"
            android:layout_height="@dimen/_26sdp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@null"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/ic_perfect" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:fontFamily="@font/lato"
            android:includeFontPadding="false"
            android:text="@string/perfect"
            android:textAlignment="center"
            android:textColor="@color/text_color"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>