<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/dialog_confirm_delete_inset"
    android:paddingTop="@dimen/_12sdp"
    android:paddingHorizontal="@dimen/_12sdp"
    android:paddingBottom="@dimen/_10sdp">

    <TextView
        android:id="@+id/tvEditTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:paddingHorizontal="@dimen/_12sdp"
        android:fontFamily="@font/lato"
        android:text="@string/select_label"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_18ssp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/btnCreateNew"
        android:layout_width="@dimen/_30sdp"
        android:layout_height="@dimen/_30sdp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="@dimen/_6sdp"
        android:visibility="gone"
        android:src="@drawable/ic_edit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.airbnb.epoxy.EpoxyRecyclerView
        android:id="@+id/rvLabel"
        android:layout_width="match_parent"
        tools:listitem="@layout/epoxy_item_label"
        android:layout_height="@dimen/_150sdp"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:itemCount="5"
        app:spanCount="2"
        app:layout_constraintTop_toBottomOf="@id/tvEditTitle" />

    <TextView
        android:id="@+id/btnOk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/save"
        android:textAllCaps="true"
        android:textColor="@color/main_green_color"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvLabel" />

    <TextView
        android:id="@+id/btnNo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_6sdp"
        android:alpha="0.5"
        android:background="?attr/selectableItemBackground"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:paddingHorizontal="@dimen/_12sdp"
        android:paddingVertical="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textColor="@color/text_color"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/btnOk"
        app:layout_constraintTop_toBottomOf="@id/rvLabel" />
</androidx.constraintlayout.widget.ConstraintLayout>